# DOWIS

./: .gitignore  README.md  eval_outputs.py  main.py  pyproject.toml  run_eval.sh  utils.py
analysis/: modality_averages.json  prompt_type_avg_langs.py  prompt_types_heat_map_prompt_modality.py  speech_vs_text_prompt_avg_langs.py  speech_vs_text_prompt_heatmap_langs.py  utils.py
analysis/latex/: modality_table.tex  prompt_type_table.tex
analysis/prompt_WER/: summarise_from_json.py  transcribe_and_eval_prompt.sh  transcribe_and_eval_prompts.py  wer_results.json  wer_summary.json
analysis/result_json/: modality_averages.json  prompt_type_averages.json
data/: achap.py  asr.py  mt.py  s2st.py  slu.py  sqa.py  ssum.py  st.py  tsum.py  tts.py  utils.py
data_storage/: readme.txt
data_storage/mcif/: questions.tsv
eval/: achap.py  asr.py  mt.py  s2st.py  sqa.py  ssum.py  st.py  tsum.py  tts.py  utils.py
models/: phi_multimodal.py  qwen_omni.py
outputs/phi_multimodal/ASR/: en.jsonl  fr.jsonl  (+2 more)
prompts/: add_file_paths_to_text_prompts.py  audio_prompts_statistics.json  preprocess_audio.py  prompts_alb.json  prompts_cs.json  prompts_cz.json  prompts_de.json  prompts_en.json  prompts_es.json  prompts_fr.json  prompts_hu.json  prompts_it.json  prompts_nl.json  prompts_pt.json  prompts_ru.json  prompts_sq.json  prompts_sv.json
prompts/utils/: add_file_paths_to_text_prompts.py  audio_prompts_statistics.json  convert_csv_to_json.py  get_stats.py  preprocess_audio.py  upload_to_hf.py
run_scripts_eval/: asr.sh  mt.sh  s2st.sh  sqa.sh  ssum.sh  st.sh  tsum.sh  tts.sh
(+512 files in other folders)
