[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprompt"
version = "0.1.0"
description = "sprompt project"
authors = [
    { name = "Maike Züfle" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm"
    "librosa",
    "soundfile",
]

[project.optional-dependencies]
eval = [
    "jiwer",
    "unbabel-comet",
    "bert-score",
]
