[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DOWIS"
version = "0.1.0"
description = "DOWIS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "librosa",
    "soundfile",
]

[project.optional-dependencies]
eval = [
    "torch",
    "torchaudio",
    "torchvision",
    "jiwer",
    "unbabel-comet",
    "bert-score",
    "mutagen>=1.47",
    "chunkseg[align,titles]==0.3.1",
]
